--- a/res/layout/fragment_monthly.xml
+++ b/res/layout/fragment_monthly.xml
@@ -17,33 +17,38 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
-                 <ImageButton
+
+                <ImageButton
                     android:id="@+id/imageButtonPrevious"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:src="@drawable/ic_action_previous_item" />
-                
-            
 
-            <ImageButton
-                android:id="@+id/imageButtonChooseDay"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="220dp"
-                    android:layout_marginRight="220dp"
-                android:src="@drawable/ic_action_go_to_today" />
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
 
-            <ImageButton
-                android:id="@+id/imageButtonNext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                
-                android:src="@drawable/ic_action_next_item" />
+                <ImageButton
+                    android:id="@+id/imageButtonChooseDay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_action_go_to_today" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <ImageButton
+                    android:id="@+id/imageButtonNext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_action_next_item" />
             </LinearLayout>
-            
         </TableRow>
 
         <TableRow
@@ -57,28 +62,95 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Monthly Glucose Level" />
-
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
-
         </TableRow>
 
         <LinearLayout
             android:id="@+id/monthlyGraphViewHolder"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:orientation="vertical" >
-
         </LinearLayout>
 
         <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="fill_parent" > >
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:id="@+id/textViewSayNumDataPoints"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="# data" />
+
+                <TextView
+                    android:id="@+id/textViewNumDataPoints"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewSayMax"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="Max Value" />
+
+                <TextView
+                    android:id="@+id/textViewMax"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewSayMin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="Min value" />
+
+                <TextView
+                    android:id="@+id/textViewMin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewSayAvg"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="Average" />
+
+                <TextView
+                    android:id="@+id/textViewAvg"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+            </LinearLayout>
+            
         </TableRow>
     </TableLayout>
 
