--- a/res/layout/fragment_weekly.xml
+++ b/res/layout/fragment_weekly.xml
@@ -25,14 +25,22 @@
                     android:layout_gravity="center"
                     android:src="@drawable/ic_action_previous_item" />
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
                 <ImageButton
                     android:id="@+id/imageButtonChooseDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="220dp"
-                    android:layout_marginRight="220dp"
                     android:src="@drawable/ic_action_go_to_today" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
 
                 <ImageButton
                     android:id="@+id/imageButtonNext"
@@ -64,7 +72,7 @@
             <LinearLayout
                 android:id="@+id/weeklyGraphViewHolder"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="250dp"
                 android:orientation="vertical" >
             </LinearLayout>
         </TableRow>
@@ -72,7 +80,76 @@
         <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="fill_parent" > >
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:id="@+id/textViewSayNumDataPoints"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="# data" />
+
+                <TextView
+                    android:id="@+id/textViewNumDataPoints"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewSayMax"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="Max Value" />
+
+                <TextView
+                    android:id="@+id/textViewMax"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewSayMin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="Min value" />
+
+                <TextView
+                    android:id="@+id/textViewMin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textViewSayAvg"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="Average" />
+
+                <TextView
+                    android:id="@+id/textViewAvg"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/cell_shape"
+                    android:text="" />
+            </LinearLayout>
         </TableRow>
     </TableLayout>
 
