--- a/res/layout-large/fragment_user_info.xml
+++ b/res/layout-large/fragment_user_info.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
             <TextView 
-                android:id="@+id/name"
+                
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:text="Name"/>
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
              >
             <TextView 
-                android:id="@+id/age"
+                
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:text="Age"/>
@@ -50,20 +50,21 @@
                 android:layout_width="100dp"
                 android:gravity="right"
                 android:layout_height="wrap_content"
+                
                 android:text="10"/>
         </TableRow>
 
         <TableRow
-            android:id="@+id/tableRowGlucose"
+            android:id="@+id/tableRowGender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
             <TextView 
-                android:id="@+id/glucose"
+                
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="Glucose"/>
+                android:text="Gender"/>
             <TextView 
-                android:id="@+id/userGlucose"
+                android:id="@+id/userGender"
                 android:layout_width="100dp"
                 android:gravity="right"
                 android:layout_height="wrap_content"
@@ -71,101 +72,48 @@
                 />
         </TableRow>
 
+        <TableRow
+            android:id="@+id/tableRowHeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Height" />
+
+            <TextView
+                android:id="@+id/textViewHeight"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRowWeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Weight" />
+
+            <TextView
+                android:id="@+id/textViewWeight"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="" />
+
+        </TableRow>
+
     </TableLayout>
 
-    <Button
-        android:id="@+id/buttonEmergency"
-        android:layout_width="170dp"
-        android:layout_height="100dp"
-        android:text="Emergency"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
-
-    <TextView
-        android:id="@+id/textViewUnreadMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Unread Message" />
-
-    <TableLayout
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-
-        android:layout_gravity="center" >
-
-        <TableRow
-            android:id="@+id/tableRowDoctorMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:id="@+id/doctorMessage"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="Doctor"/>
-            <TextView 
-                android:id="@+id/doctorMessageNumber"
-                android:layout_width="50dp"
-                android:gravity="right"
-                android:layout_height="wrap_content"
-                android:text="1"
-                />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRowFatherMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:id="@+id/fatherMessage"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="Father"/>
-            <TextView 
-                android:id="@+id/fatherMessageNumber"
-                android:layout_width="50dp"
-                android:gravity="right"
-                android:layout_height="wrap_content"
-                android:text="2"
-                />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRowMotherMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:id="@+id/motherMessage"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="Mother"/>
-            <TextView 
-                android:id="@+id/motherMessageNumber"
-                android:layout_width="50dp"
-                android:gravity="right"
-                android:layout_height="wrap_content"
-                android:text="0"
-                />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRowFriendMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:id="@+id/friendMessage"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="Friend"/>
-            <TextView 
-                android:id="@+id/friendMessageNumber"
-                android:layout_width="50dp"
-                android:gravity="right"
-                android:layout_height="wrap_content"
-                android:text="0"
-                />
-        </TableRow>
-    </TableLayout>
+    
 
 </LinearLayout>
