--- a/res/layout/activity_view_on_map.xml
+++ b/res/layout/activity_view_on_map.xml
@@ -3,7 +3,7 @@
     android:layout_height="fill_parent" >
 
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/tableRowHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
